--- a/Application/Example/BUILD
+++ b/Application/Example/BUILD
@@ -3,6 +3,6 @@ load("@rules_cc//cc:defs.bzl", "cc_binary")
 cc_binary(
     name = "example_application",
     srcs = ["ExampleApplication.cc"],
-    deps = ["//Library/Common/Example:example_library"],
+    deps = ["//Library/Common/Example:example_library",],
     visibility = ["//visibility:public"],
 )
