--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,29 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+  build:
+    working_directory: /Vision
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+      - image: "arminpcm/vision:latest"
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: Build with Bazel
+          command: |
+            docker build -t arminpcm/vision:latest -f Container/Dev.dockerfile .
+            docker run arminpcm/vision:latest bazel build //...
+  test:
+    working_directory: /Vision
+    docker:
+      - image: "arminpcm/vision:latest"
+    steps:
+      - checkout
+      - run: docker run arminpcm/vision:latest bazel test //...
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  build_and_test:
     jobs:
-      - say-hello
+      - build
+      - test:
+          requires:
+            - build
