--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,15 +10,14 @@ jobs:
       - run:
           name: Build with Bazel
           command: |
-            docker build -t arminpcm/vision:latest -f Container/Dev.dockerfile .
-            docker run arminpcm/vision:latest bazel build //...
+            bazel build //...
   test:
     working_directory: /Vision
     docker:
       - image: "arminpcm/vision:latest"
     steps:
       - checkout
-      - run: docker run arminpcm/vision:latest bazel test //...
+      - run: bazel test //...
 
 workflows:
   build_and_test:
