--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,21 +8,13 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Build with Bazel
+          name: Build and test with Bazel
           command: |
+            chmod 777 Tool/clang_tidy/run_clang_tidy.sh
             bazel build //...
-  test:
-    working_directory: /Vision
-    docker:
-      - image: "arminpcm/vision:latest"
-    steps:
-      - checkout
-      - run: bazel test //...
+            bazel test //...
 
 workflows:
   build_and_test:
     jobs:
       - build
-      - test:
-          requires:
-            - build
