Added example config file loader using json and protobuf

--- a/Application/Example/BUILD
+++ b/Application/Example/BUILD
@@ -12,3 +12,12 @@ cc_binary(
     srcs = ["YamlExample.cc"],
     deps = ["@yaml_cpp//:yaml-cpp"],
 )
+
+cc_binary(
+    name = "example_config",
+    srcs = ["ExampleConfigApplication.cc"],
+    deps = [
+        "//Library/ConfigInterface/proto:person_cc_proto",
+        "//Library/ConfigInterface:config_interface",
+    ],
+)
