--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker and Bazel CI
 
 on:
   push:
@@ -14,5 +14,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Container/Dev.dockerfile --tag vision:$(date +%s)
+    - name: Docker
+      run: docker build . --file Container/Dev.dockerfile --tag vision:latest
+    - name: Build
+      run: docker run -v ${{ github.workspace }}:/Vision vision:latest \
+            bazel build //... --config clang-tidy
+    - name: Test
+      run: docker run -v ${{ github.workspace }}:/Vision vision:latest \
+            bazel test //...
+        
+      
