--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,10 +17,8 @@ jobs:
     - name: Docker
       run: docker build . --file Container/Dev.dockerfile --tag vision:latest
     - name: Build
-      run: docker run -v ${{ github.workspace }}:/Vision vision:latest \
-            bazel build //... --config clang-tidy
+      run: docker run -v ${{ github.workspace }}:/Vision vision:latest bazel build //... --config clang-tidy
     - name: Test
-      run: docker run -v ${{ github.workspace }}:/Vision vision:latest \
-            bazel test //...
+      run: docker run -v ${{ github.workspace }}:/Vision vision:latest bazel test //...
         
       
