--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Docker
       run: docker build . --file Container/Dev.dockerfile --tag vision:latest
     - name: Build
-      run: docker run -u docker -v ${{ github.workspace }}:/Vision vision:latest bazel build //... --config clang-tidy
+      run: docker run -t -u docker -v ${{ github.workspace }}:/Vision vision:latest sh -c "sudo chown docker Tool/clang_tidy/run_clang_tidy.sh && bazel build //... --config=clang-tidy"
     - name: Test
       run: docker run -u docker -v ${{ github.workspace }}:/Vision vision:latest bazel test //...
         
