--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,11 +14,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Docker
+    - name: Docker Build
       run: docker build . --file Container/Dev.dockerfile --tag vision:latest
-    - name: Build
-      run: docker run -v ${{ github.workspace }}:/Vision vision:latest bazel build //... --config clang-tidy
-    - name: Test
-      run: docker run -v ${{ github.workspace }}:/Vision vision:latest bazel test //...
-        
-      
