Added example component

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,4 @@
+build --cxxopt=-std=c++20
 # Required for bazel_clang_tidy to operate as expected
 build:clang-tidy --aspects //Tool/clang_tidy:clang_tidy.bzl%clang_tidy_aspect
 build:clang-tidy --output_groups=report
