Added readme file and cleaned up how component is implemented

--- a/Application/Example/ExampleComponentLibrary/BUILD
+++ b/Application/Example/ExampleComponentLibrary/BUILD
@@ -3,7 +3,7 @@ load("@rules_cc//cc:defs.bzl", "cc_binary")
 cc_library(
     name = "example_component_library",
     hdrs = [
-        "ExampleComponentLibrary.h",
+        "ExampleComponentLibrary.hpp",
     ],
     deps = [
         "//Library/ConfigInterface/proto:person_cc_proto",
