--- a/.bazelrc
+++ b/.bazelrc
@@ -1,4 +1,7 @@
-build --cxxopt=-std=c++20
+build --cxxopt=-std=c++11
 # Required for bazel_clang_tidy to operate as expected
-build:clang-tidy --aspects //Tool/clang_tidy:clang_tidy.bzl%clang_tidy_aspect
+build:clang-tidy --aspects @bazel_clang_tidy//clang_tidy:clang_tidy.bzl%clang_tidy_aspect
 build:clang-tidy --output_groups=report
+
+# Optionally override the .clang-tidy config file target
+build:clang-tidy --@bazel_clang_tidy//:clang_tidy_config=//:clang_tidy_config
