Working version with unit test updated

--- a/Application/Example/ExampleComponentLibrary/BUILD
+++ b/Application/Example/ExampleComponentLibrary/BUILD
@@ -7,7 +7,7 @@ cc_library(
     ],
     deps = [
         "//Library/ConfigInterface/proto:example_config_cc_proto",
-        "//Library/ConfigInterface/proto:example_message_cc_proto",
+        "//Library/SharedMemory/messages:example_message"
     ],
     visibility = ["//visibility:public"],
 )
