Added multi headed attention layer

--- a/Python/MachineLearning/Example/BUILD
+++ b/Python/MachineLearning/Example/BUILD
@@ -1,12 +1,12 @@
-load("@rules_python//python:defs.bzl", "py_library")
+load("@rules_python//python:defs.bzl", "py_binary")
 load("@pip_vision_deps//:requirements.bzl", "requirement")
 
 package(default_visibility = ["//visibility:public"])
 
 py_binary(
     name = "example_python",
-    main = "python_example.py",
-    srcs = ["python_example.py"],
+    main = "PythonExample.py",
+    srcs = ["PythonExample.py"],
     deps = [
         requirement("torch"),
     ],
